--- a/index.html
+++ b/index.html
@@ -122,6 +122,13 @@
 
         <div class="swiper-pagination"></div>
     </section>
+
+    <section class="calculation">
+        <div class="container">
+            <form></form>
+        </div>
+    </section>
+
 </main>
 <footer>
     Footer
