--- a/index.html
+++ b/index.html
@@ -123,9 +123,51 @@
         <div class="swiper-pagination"></div>
     </section>
 
+    <section class="advantages">
+        <div class="container">
+            <div class="template-title">
+                <h2>Почему стоит выбрать именно нас?</h2>
+            </div>
+        </div>
+    </section>
+    <section class="delivery">
+        <div class="container">
+            <div class="template-title">
+                <h2>Варианты доставки грузов из Китая</h2>
+            </div>
+        </div>
+    </section>
+
     <section class="calculation">
         <div class="container">
             <form></form>
+        </div>
+    </section>
+    <section class="services">
+        <div class="container">
+            <div class="template-title">
+                <h2>Услуги</h2>
+            </div>
+        </div>
+    </section>
+
+    <section>
+        <div class="container">
+            <div class="template-title">
+                <h2>Готовы к сотруднечиству?</h2>
+                <h3>Зарегистрируйте гру!</h3>
+            </div>
+        </div>
+        <div class="template-title">
+            <h2>Готовы к сотруднечиству?</h2>
+        </div>
+        <div class="container">
+            <div class="template-title template-title_case-2">
+                <h2>О компании</h2>
+            </div>
+            <div class="template-title template-title_case-3">
+                <h2>Получить рассчет стоимости доставки вашего груза</h2>
+            </div>
         </div>
     </section>
 
