--- a/index.html
+++ b/index.html
@@ -123,21 +123,6 @@
         <div class="swiper-pagination"></div>
     </section>
 
-    <section class="advantages">
-        <div class="container">
-            <div class="template-title">
-                <h2>Почему стоит выбрать именно нас?</h2>
-            </div>
-        </div>
-    </section>
-    <section class="delivery">
-        <div class="container">
-            <div class="template-title">
-                <h2>Варианты доставки грузов из Китая</h2>
-            </div>
-        </div>
-    </section>
-
     <section class="calculation">
         <div class="container">
             <div class="template-title template-title_case-3">
@@ -166,11 +151,11 @@
                         </div>
                     </div>
                     <div class="form-column">
-                        <div class="input-box input-box_checkbox">
+                        <div class="input-box">
                             <input id="insurance" type="checkbox" />
                             <label for="insurance">Страховка</label>
                         </div>
-                        <div class="input-box input-box_checkbox">
+                        <div class="input-box">
                             <input id="customs-clearance" type="checkbox" />
                             <label for="customs-clearance">Таможенное оформление</label>
                         </div>
@@ -198,6 +183,21 @@
         <div class="container">
             <div class="template-title">
                 <h2>Услуги</h2>
+            </div>
+        </div>
+    </section>
+
+    <section class="advantages">
+        <div class="container">
+            <div class="template-title">
+                <h2>Почему стоит выбрать именно нас?</h2>
+            </div>
+        </div>
+    </section>
+    <section class="delivery">
+        <div class="container">
+            <div class="template-title">
+                <h2>Варианты доставки грузов из Китая</h2>
             </div>
         </div>
     </section>
