--- a/index.html
+++ b/index.html
@@ -35,22 +35,22 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav w-100 justify-content-between mx-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Цены и сроки</a>
+                        <a class="nav-link" href="#">Prices and terms</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Услуги</a>
+                        <a class="nav-link" href="#">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">О компании</a>
+                        <a class="nav-link" href="#">About the company</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Контакты</a>
+                        <a class="nav-link" href="#">Contacts</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Оформить груз</a>
+                        <a class="nav-link" href="#">Process cargo</a>
                     </li>
                 </ul>
-                <a href="#" class="btn btn-primary">Оставить заявку</a>
+                <a href="#" class="btn btn-primary">Submit a request</a>
             </div>
         </div>
     </nav>
@@ -69,48 +69,48 @@
         <div class="swiper-wrapper">
             <div class="swiper-slide" style="background-image: url(assets/img/banner-1.png)">
                 <div class="container">
-                    <h1 class="banner-title">Прямое КАРГО из Китая</h1>
+                    <h1 class="banner-title">Direct CARGO from China</h1>
                     <h5 class="banner-description">
-					Доставляем любые грузы из Китая по честной цене.
+					We deliver any cargo from China at a fair price.
 				</h5>
                     <a href="#" class="btn btn-primary btn-lg"
-					>Рассчитать стоимость
+					>Calculate the cost
 					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
 				/></a>
                 </div>
             </div>
             <div class="swiper-slide" style="background-image: url(assets/img/banner-2.png)">
                 <div class="container">
-                    <h2 class="banner-title">Выкуп товара с ТаоБао, 1688</h2>
+                    <h2 class="banner-title">Purchase of goods from Taobao, 1688</h2>
                     <h5 class="banner-description">
-					Выкуп и доставка товаров с китайских торговых площадок.
+					Purchase and delivery of goods from Chinese trading platforms.
 				</h5>
                     <a href="#" class="btn btn-primary btn-lg"
-					>Рассчитать стоимость
+					>Calculate the cost
 					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
 				/></a>
                 </div>
             </div>
             <div class="swiper-slide" style="background-image: url(assets/img/banner-3.png)">
                 <div class="container">
-                    <h2 class="banner-title">Экспресс авто доставка</h2>
+                    <h2 class="banner-title">Express car delivery</h2>
                     <h5 class="banner-description">
-					Доставляем любые грузы из Китая по честной цене.
+					We deliver any cargo from China at a fair price.
 				</h5>
                     <a href="#" class="btn btn-primary btn-lg"
-					>Рассчитать стоимость
+					>Calculate the cost
 					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
 				/></a>
                 </div>
             </div>
             <div class="swiper-slide" style="background-image: url(assets/img/banner-4.png)">
                 <div class="container">
-                    <h2 class="banner-title">Аренда склада</h2>
+                    <h2 class="banner-title">Warehouse rental</h2>
                     <h5 class="banner-description">
-					Выкуп и доставка товаров с китайских торговых площадок.
+					Purchase and delivery of goods from Chinese trading platforms.
 				</h5>
                     <a href="#" class="btn btn-primary btn-lg"
-					>Рассчитать стоимость
+					>Calculate the cost
 					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
 				/></a>
                 </div>
@@ -127,13 +127,13 @@
     <section class="calculation">
         <div class="container">
             <div class="template-title template-title_case-3">
-                <h2>Получить рассчет стоимости доставки вашего груза</h2>
+                <h2>Get a quote for the cost of shipping your cargo</h2>
             </div>
             <form class="calculation-form">
                 <div class="form-row">
                     <div class="form-column">
                         <div class="input-box">
-                            <label for="product-category">Категория товара:</label>
+                            <label for="product-category">Product category:</label>
                             <select id="product-category">
                                 <option value="1">Big size</option>
                                 <option value="2">Midle size</option>
@@ -141,34 +141,34 @@
                             </select>
                         </div>
                         <div class="input-box">
-                            <label for="cargo-weight">Вес груза (кг):</label>
-                            <input id="cargo-weight" type="number" placeholder="Введите вес" inputmode="numeric" />
+                            <label for="cargo-weight">Cargo weight (kg):</label>
+                            <input id="cargo-weight" type="number" placeholder="Enter weight" inputmode="numeric" />
                         </div>
                     </div>
                     <div class="form-column">
                         <div class="input-box">
-                            <label for="cargo-cost">Стоимость груза:</label>
-                            <input id="cargo-cost" type="number" placeholder="Введите стоимость" inputmode="numeric" />
+                            <label for="cargo-cost">Cost of cargo:</label>
+                            <input id="cargo-cost" type="number" placeholder="Enter the cost" inputmode="numeric" />
                         </div>
                         <div class="input-box">
-                            <label for="cargo-volume">Объем груза (м3):</label>
-                            <input id="cargo-volume" type="number" placeholder="Введите объем" inputmode="numeric" />
+                            <label for="cargo-volume">Cargo volume (m3):</label>
+                            <input id="cargo-volume" type="number" placeholder="Enter volume" inputmode="numeric" />
                         </div>
                     </div>
                     <div class="form-column">
                         <div class="input-box">
                             <input id="insurance" type="checkbox" />
-                            <label for="insurance">Страховка</label>
+                            <label for="insurance">Insurance</label>
                         </div>
                         <div class="input-box">
                             <input id="customs-clearance" type="checkbox" />
-                            <label for="customs-clearance">Таможенное оформление</label>
+                            <label for="customs-clearance">Customs clearance</label>
                         </div>
                     </div>
                     <div class="form-column">
                         <div class="input-box">
-                            <label for="HS-code">Код ТН ВЭД:</label>
-                            <input id="HS-code" type="text" placeholder="Введите код" inputmode="text" />
+                            <label for="HS-code">HS code:</label>
+                            <input id="HS-code" type="text" placeholder="Enter the code" inputmode="text" />
                         </div>
                     </div>
                 </div>
@@ -176,11 +176,11 @@
                     <div class="input-box">
                         <div id="file-name" class="file-name"></div>
                         <input id="calculation-file" type="file" />
-                        <label for="calculation-file">Загрузить файл</label>
+                        <label for="calculation-file">Download file</label>
                     </div>
                 </div>
                 <a href="#" class="btn btn-lg btn-primary"
-				>Следующий шаг <img src="assets/img/icon-arrow-left.svg" alt="arrow"
+				>Next step<img src="assets/img/icon-arrow-left.svg" alt="arrow"
 			/></a>
             </form>
             <img
