--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                             <label for="product-category">Product category:</label>
                             <select id="product-category">
                                 <option value="1">Big size</option>
-                                <option value="2">Midle size</option>
+                                <option value="2">Middle size</option>
                                 <option value="3">Little size</option>
                             </select>
                         </div>
