--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                         </div>
                         <div class="input-box">
                             <label for="cargo-weight">Cargo weight (kg):</label>
-                            <input id="cargo-weight" type="number" placeholder="Enter weight" inputmode="numeric" />
+                            <input id="cargo-weight" type="number" placeholder="Enter the weight" inputmode="numeric" />
                         </div>
                     </div>
                     <div class="form-column">
@@ -152,7 +152,7 @@
                         </div>
                         <div class="input-box">
                             <label for="cargo-volume">Cargo volume (m3):</label>
-                            <input id="cargo-volume" type="number" placeholder="Enter volume" inputmode="numeric" />
+                            <input id="cargo-volume" type="number" placeholder="Enter the volume" inputmode="numeric" />
                         </div>
                     </div>
                     <div class="form-column">
@@ -176,7 +176,7 @@
                     <div class="input-box">
                         <div id="file-name" class="file-name"></div>
                         <input id="calculation-file" type="file" />
-                        <label for="calculation-file">Download file</label>
+                        <label for="calculation-file">Upload product photo</label>
                     </div>
                 </div>
                 <a href="#" class="btn btn-lg btn-primary"
