--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <h5 class="banner-description">
 					We deliver any cargo from China at a fair price.
 				</h5>
-                    <a href="#" class="btn btn-primary btn-lg"
+                    <a href="#calculation" class="btn btn-primary btn-lg"
 					>Calculate the cost
 					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
 				/></a>
@@ -85,7 +85,7 @@
                     <h5 class="banner-description">
 					Purchase and delivery of goods from Chinese trading platforms.
 				</h5>
-                    <a href="#" class="btn btn-primary btn-lg"
+                    <a href="#calculation" class="btn btn-primary btn-lg"
 					>Calculate the cost
 					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
 				/></a>
@@ -97,7 +97,7 @@
                     <h5 class="banner-description">
 					We deliver any cargo from China at a fair price.
 				</h5>
-                    <a href="#" class="btn btn-primary btn-lg"
+                    <a href="#calculation" class="btn btn-primary btn-lg"
 					>Calculate the cost
 					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
 				/></a>
@@ -109,7 +109,7 @@
                     <h5 class="banner-description">
 					Purchase and delivery of goods from Chinese trading platforms.
 				</h5>
-                    <a href="#" class="btn btn-primary btn-lg"
+                    <a href="#calculation" class="btn btn-primary btn-lg"
 					>Calculate the cost
 					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
 				/></a>
@@ -124,7 +124,7 @@
         <div class="swiper-pagination"></div>
     </section>
 
-    <section class="calculation">
+    <section id="calculation" class="calculation">
         <div class="container">
             <div class="template-title template-title_case-3">
                 <h2>Get a quote for the cost of shipping your cargo</h2>
@@ -179,9 +179,9 @@
                         <label for="calculation-file">Upload product photo</label>
                     </div>
                 </div>
-                <a href="#" class="btn btn-lg btn-primary"
-				>Next step<img src="assets/img/icon-arrow-left.svg" alt="arrow"
-			/></a>
+                <button type="submit" href="#" class="btn btn-lg btn-primary">
+                    Next step<img src="assets/img/icon-arrow-left.svg" alt="arrow" />
+                </button>
             </form>
             <img
 			src="assets/img/calculation-person.png"
