feat: update project

--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
 					<img src="assets/img/logo-mobile.svg" class="img-fluid" alt="logo" />
 				</picture>
 			</a>
-
             <button class="navbar-toggler hamburger hamburger--collapse" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
 					<span class="hamburger-inner"></span>
                 </span>
             </button>
-
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav w-100 justify-content-between mx-auto">
                     <li class="nav-item">
@@ -55,14 +53,6 @@
         </div>
     </nav>
 </header>
-<!-- <div class="container">
-	<a href="#" class="btn btn-primary">Оставить заявку</a>
-	<a href="#" class="btn btn-primary btn-sm">Оставить заявку</a>
-	<a href="#" class="btn btn-primary btn-lg"
-		>Оставить заявку <img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
-	/></a>
-	<a href="#" class="btn btn-secondary">Подробнее</a>
-</div> -->
 
 <main class="wrapper home">
     <section class="swiper swiper-banner">
@@ -190,18 +180,91 @@
 		/>
         </div>
     </section>
-    <section class="services">
+    <section class="advantages bg-accent">
         <div class="container">
             <div class="template-title">
-                <h2>Услуги</h2>
+                <h2>Why choose us?</h2>
+            </div>
+            <div id="advantages" class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <div class="advantage">
+                            <div class="advantage__img-box">
+                                <img src="assets/img/advantage-1.svg" class="advantag__img" />
+                            </div>
+                            <h6 class="advantage__title">Customs clearance of cargo</h6>
+                        </div>
+                    </div>
+
+                    <div class="swiper-slide">
+                        <div class="advantage">
+                            <div class="advantage__img-box">
+                                <img src="assets/img/advantage-2.svg" class="advantag__img" />
+                            </div>
+                            <h6 class="advantage__title">Cargo insurance</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="advantage">
+                            <div class="advantage__img-box">
+                                <img src="assets/img/advantage-3.svg" class="advantag__img" />
+                            </div>
+                            <h6 class="advantage__title">Checking goods for defects</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="advantage">
+                            <div class="advantage__img-box">
+                                <img src="assets/img/advantage-4.svg" class="advantag__img" />
+                            </div>
+                            <h6 class="advantage__title">Delivery to any city of Ukraine</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="advantage">
+                            <div class="advantage__img-box">
+                                <img src="assets/img/advantage-5.svg" class="advantag__img" />
+                            </div>
+                            <h6 class="advantage__title">Consolidation in stock</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="advantage">
+                            <div class="advantage__img-box">
+                                <img src="assets/img/advantage-6.svg" class="advantag__img" />
+                            </div>
+                            <h6 class="advantage__title">Responsible storage of cargo</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="advantage">
+                            <div class="advantage__img-box">
+                                <img src="assets/img/advantage-7.svg" class="advantag__img" />
+                            </div>
+                            <h6 class="advantage__title">Assistance in paying for goods</h6>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="advantage">
+                            <div class="advantage__img-box">
+                                <img src="assets/img/advantage-8.svg" class="advantag__img" />
+                            </div>
+                            <h6 class="advantage__title">
+							Packing, repacking, palletizing of cargo for international
+							transportation
+						</h6>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-pagination"></div>
             </div>
         </div>
     </section>
 
-    <section class="advantages">
+    <section class="services">
         <div class="container">
             <div class="template-title">
-                <h2>Почему стоит выбрать именно нас?</h2>
+                <h2>Услуги</h2>
             </div>
         </div>
     </section>
