--- a/index.html
+++ b/index.html
@@ -195,7 +195,6 @@
                             <h6 class="advantage__title">Customs clearance of cargo</h6>
                         </div>
                     </div>
-
                     <div class="swiper-slide">
                         <div class="advantage">
                             <div class="advantage__img-box">
@@ -250,8 +249,7 @@
                                 <img src="assets/img/advantage-8.svg" class="advantag__img" />
                             </div>
                             <h6 class="advantage__title">
-							Packing, repacking, palletizing of cargo for international
-							transportation
+							Packing, repacking, palletizing of cargo
 						</h6>
                         </div>
                     </div>
@@ -261,17 +259,17 @@
         </div>
     </section>
 
+    <section class="delivery">
+        <div class="container">
+            <div class="template-title">
+                <h2>Shipping options from China</h2>
+            </div>
+        </div>
+    </section>
     <section class="services">
         <div class="container">
             <div class="template-title">
                 <h2>Услуги</h2>
-            </div>
-        </div>
-    </section>
-    <section class="delivery">
-        <div class="container">
-            <div class="template-title">
-                <h2>Варианты доставки грузов из Китая</h2>
             </div>
         </div>
     </section>
