--- a/index.html
+++ b/index.html
@@ -263,6 +263,34 @@
         <div class="container">
             <div class="template-title">
                 <h2>Shipping options from China</h2>
+                <div class="card">
+                    <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
+                    <img
+					src="assets/img/delivery-1.png"
+					class="card-img-top"
+					alt="delivery"
+				/>
+                    <div class="card-body">
+                        <h5 class="card-title">Auto - Standard</h5>
+                        <ul class="card__options-list">
+                            <li class="card__options-item">
+                                <img src="assets/img/icon-calendar.svg" alt="calendar" />9–15 days
+                            </li>
+                            <li class="card__options-item">
+                                <img src="assets/img/icon-box.svg" alt="box" />from 5 kg
+                            </li>
+                        </ul>
+                        <div class="card__price">
+                            <span>from </span>
+                            <strong>2,5</strong>
+                            <span>$/kg</span>
+                        </div>
+                        <div class="card__btn-row">
+                            <a href="#" class="btn btn-sm btn-primary">Submit a request </a>
+                            <a href="#" class="btn btn-sm btn-secondary">Learn more </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -276,6 +304,49 @@
 
     <section>
         <div class="container">
+            <div style="display: flex; gap: 48px">
+                <div class="card">
+                    <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
+                    <img
+					src="assets/img/delivery-1.png"
+					class="card-img-top"
+					alt="delivery"
+				/>
+                    <div class="card-body">
+                        <h5 class="card-title">Авто - обычная</h5>
+                        <ul class="card__options-list">
+                            <li class="card__options-item">
+                                <img src="assets/img/icon-calendar.svg" alt="calendar" />9-15 дней
+                            </li>
+                            <li class="card__options-item">
+                                <img src="assets/img/icon-box.svg" alt="box" />от 5 кг
+                            </li>
+                        </ul>
+                        <div class="card__price">
+                            <span>от</span>
+                            <strong>2,5</strong>
+                            <span>$/кг</span>
+                        </div>
+                        <div class="card__btn-row">
+                            <a href="#" class="btn btn-sm btn-primary">Оставить заявку</a>
+                            <a href="#" class="btn btn-sm btn-secondary">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card_services" style="background-image: url(assets/img/services-1.png)">
+                    <div class="card-body">
+                        <h5 class="card-title">Авто - обычная</h5>
+                        <p class="card-text">
+                            Компания - это полный комплекс логистических услуг по доставке
+                            грузов из Китая в Украину - сборные грузы и цельные товарные партии,
+                            услуги посредника ТаоБао, КАРГО Китай-Украина.
+                        </p>
+                        <div class="card__btn-row">
+                            <a href="#" class="btn btn-sm btn-secondary">Подробнее</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="template-title">
                 <h2>Готовы к сотруднечиству?</h2>
                 <h3>Зарегистрируйте гру!</h3>
