project refactor code

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container">
             <a class="logo" href="index.html">
-				<picture>
-					<source media="(min-width: 992px)" srcset="assets/img/logo.svg" />
-					<img src="assets/img/logo-mobile.svg" class="img-fluid" alt="logo" />
-				</picture>
-			</a>
+        <picture>
+          <source media="(min-width: 992px)" srcset="assets/img/logo.svg" />
+          <img src="assets/img/logo-mobile.svg" class="img-fluid" alt="logo" />
+        </picture>
+      </a>
             <button class="navbar-toggler hamburger hamburger--collapse" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="hamburger-box">
-					<span class="hamburger-inner"></span>
+          <span class="hamburger-inner"></span>
                 </span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -60,49 +60,41 @@
             <div class="swiper-slide" style="background-image: url(assets/img/banner-1.png)">
                 <div class="container">
                     <h1 class="banner-title">Direct CARGO from China</h1>
-                    <h5 class="banner-description">
-					We deliver any cargo from China at a fair price.
-				</h5>
-                    <a href="#calculation" class="btn btn-primary btn-lg"
-					>Calculate the cost
-					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
-				/></a>
+                    <h5 class="banner-description">We deliver any cargo from China at a fair price.</h5>
+                    <a href="#calculation" class="btn btn-primary btn-lg">
+          Calculate the cost
+          <img src="assets/img/icon-arrow-left.svg" alt="icon-arrow" />
+        </a>
                 </div>
             </div>
             <div class="swiper-slide" style="background-image: url(assets/img/banner-2.png)">
                 <div class="container">
                     <h2 class="banner-title">Purchase of goods from Taobao, 1688</h2>
-                    <h5 class="banner-description">
-					Purchase and delivery of goods from Chinese trading platforms.
-				</h5>
-                    <a href="#calculation" class="btn btn-primary btn-lg"
-					>Calculate the cost
-					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
-				/></a>
+                    <h5 class="banner-description">Purchase and delivery of goods from Chinese trading platforms.</h5>
+                    <a href="#calculation" class="btn btn-primary btn-lg">
+          Calculate the cost
+          <img src="assets/img/icon-arrow-left.svg" alt="icon-arrow" />
+        </a>
                 </div>
             </div>
             <div class="swiper-slide" style="background-image: url(assets/img/banner-3.png)">
                 <div class="container">
                     <h2 class="banner-title">Express car delivery</h2>
-                    <h5 class="banner-description">
-					We deliver any cargo from China at a fair price.
-				</h5>
-                    <a href="#calculation" class="btn btn-primary btn-lg"
-					>Calculate the cost
-					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
-				/></a>
+                    <h5 class="banner-description">We deliver any cargo from China at a fair price.</h5>
+                    <a href="#calculation" class="btn btn-primary btn-lg">
+          Calculate the cost
+          <img src="assets/img/icon-arrow-left.svg" alt="icon-arrow" />
+        </a>
                 </div>
             </div>
             <div class="swiper-slide" style="background-image: url(assets/img/banner-4.png)">
                 <div class="container">
                     <h2 class="banner-title">Warehouse rental</h2>
-                    <h5 class="banner-description">
-					Purchase and delivery of goods from Chinese trading platforms.
-				</h5>
-                    <a href="#calculation" class="btn btn-primary btn-lg"
-					>Calculate the cost
-					<img src="assets/img/icon-arrow-left.svg" alt="icon-arrow"
-				/></a>
+                    <h5 class="banner-description">Purchase and delivery of goods from Chinese trading platforms.</h5>
+                    <a href="#calculation" class="btn btn-primary btn-lg">
+          Calculate the cost
+          <img src="assets/img/icon-arrow-left.svg" alt="icon-arrow" />
+        </a>
                 </div>
             </div>
         </div>
@@ -113,7 +105,6 @@
 
         <div class="swiper-pagination"></div>
     </section>
-
     <section id="calculation" class="calculation">
         <div class="container">
             <div class="template-title template-title_case-3">
@@ -170,16 +161,14 @@
                     </div>
                 </div>
                 <button type="submit" href="#" class="btn btn-lg btn-primary">
-                    Next step<img src="assets/img/icon-arrow-left.svg" alt="arrow" />
+                    Next step
+                    <img src="assets/img/icon-arrow-left.svg" alt="arrow" />
                 </button>
             </form>
-            <img
-			src="assets/img/calculation-person.png"
-			class="calculation-img"
-			alt="person"
-		/>
+            <img src="assets/img/calculation-person.png" class="calculation-img" alt="person" />
         </div>
     </section>
+
     <section class="advantages bg-accent">
         <div class="container">
             <div class="template-title">
@@ -248,9 +237,7 @@
                             <div class="advantage__img-box">
                                 <img src="assets/img/advantage-8.svg" class="advantag__img" />
                             </div>
-                            <h6 class="advantage__title">
-							Packing, repacking, palletizing of cargo
-						</h6>
+                            <h6 class="advantage__title">Packing, repacking, palletizing of cargo</h6>
                         </div>
                     </div>
                 </div>
@@ -258,36 +245,33 @@
             </div>
         </div>
     </section>
-
     <section class="delivery">
         <div class="container">
             <div class="template-title">
                 <h2>Shipping options from China</h2>
                 <div class="card">
                     <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
-                    <img
-					src="assets/img/delivery-5.png"
-					class="card-img-top"
-					alt="delivery"
-				/>
+                    <img src="assets/img/delivery-5.png" class="card-img-top" alt="delivery" />
                     <div class="card-body">
                         <h5 class="card-title">Auto - Standard</h5>
                         <ul class="card__options-list">
                             <li class="card__options-item">
-                                <img src="assets/img/icon-calendar.svg" alt="calendar" />9–15 days
+                                <img src="assets/img/icon-calendar.svg" alt="calendar" />
+              9–15 days
                             </li>
                             <li class="card__options-item">
-                                <img src="assets/img/icon-box.svg" alt="box" />from 5 kg
+                                <img src="assets/img/icon-box.svg" alt="box" />
+              from 5 kg
                             </li>
                         </ul>
                         <div class="card__price">
-                            <span>from </span>
+                            <span>from</span>
                             <strong>2,5</strong>
                             <span>$/kg</span>
                         </div>
                         <div class="card__btn-row">
-                            <a href="#" class="btn btn-sm btn-primary">Submit a request </a>
-                            <a href="#" class="btn btn-sm btn-secondary">Learn more </a>
+                            <a href="#" class="btn btn-sm btn-primary">Submit a request</a>
+                            <a href="#" class="btn btn-sm btn-secondary">Learn more</a>
                         </div>
                     </div>
                 </div>
@@ -307,19 +291,17 @@
             <div style="display: flex; gap: 48px">
                 <div class="card">
                     <div class="card__img-box" role="img" aria-label="Description of the overall image"></div>
-                    <img
-					src="assets/img/delivery-1.png"
-					class="card-img-top"
-					alt="delivery"
-				/>
+                    <img src="assets/img/delivery-1.png" class="card-img-top" alt="delivery" />
                     <div class="card-body">
                         <h5 class="card-title">Авто - обычная</h5>
                         <ul class="card__options-list">
                             <li class="card__options-item">
-                                <img src="assets/img/icon-calendar.svg" alt="calendar" />9-15 дней
+                                <img src="assets/img/icon-calendar.svg" alt="calendar" />
+              9-15 дней
                             </li>
                             <li class="card__options-item">
-                                <img src="assets/img/icon-box.svg" alt="box" />от 5 кг
+                                <img src="assets/img/icon-box.svg" alt="box" />
+              от 5 кг
                             </li>
                         </ul>
                         <div class="card__price">
@@ -337,9 +319,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Авто - обычная</h5>
                         <p class="card-text">
-                            Компания - это полный комплекс логистических услуг по доставке
-                            грузов из Китая в Украину - сборные грузы и цельные товарные партии,
-                            услуги посредника ТаоБао, КАРГО Китай-Украина.
+                            Компания - это полный комплекс логистических услуг по доставке грузов из Китая в Украину - сборные грузы и
+                            цельные товарные партии, услуги посредника ТаоБао, КАРГО Китай-Украина.
                         </p>
                         <div class="card__btn-row">
                             <a href="#" class="btn btn-sm btn-secondary">Подробнее</a>
@@ -366,11 +347,11 @@
     </section>
 
 </main>
-<footer>
-    Footer
-</footer>
-<script src="assets/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/swiper-bundle.min.js"></script>
-<script src="assets/js/nice-select2.js"></script>
-<script src="assets/js/custom.js"></script>
+
+<body>
+    <footer>Footer</footer>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/nice-select2.js"></script>
+    <script src="assets/js/custom.js"></script>
 </body>
